Added Topic no.4 (Directives,types of directives, uses  ngFor and ngIf)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,11 @@
   <tr>
     <app-data-binding></app-data-binding>
   </tr>
+  <tr>
+    <app-ng-if></app-ng-if>
+  </tr>
+  <tr>
+    <app-ng-for></app-ng-for>
+  </tr>
 
 </table>
