Added Angular Form topics.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <li><a routerLink="/ngClass" routerLinkActive="active">NgClass</a></li>
     <li><a routerLink="/controlStatement" routerLinkActive="active">Control Statement</a></li>
     <li><a routerLink="/signal" routerLinkActive="active">Signal</a></li>
+    <li><a routerLink="/forms" routerLinkActive="active">Forms</a></li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
