--- a/src/app/component/forms/forms.component.html
+++ b/src/app/component/forms/forms.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="background-color: rgb(185, 218, 247); margin-top: 50px;">
   <form class="row g-3 needs-validation" novalidate>
     <div class="col-md-4">
       <label class="form-label">First name</label>
