Added the various topics

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- navbar.component.html -->
 <nav class="navbar">
-  <ul class="navbar-menu">
+  <ul class="navbar-menu" style="background-color: #2c3e50; color: white; gap: 0px;">
     <li><a routerLink="/admin" routerLinkActive="active">Admin</a></li>
     <li>
       <a routerLink="/dataBinding" routerLinkActive="active">Data Binding</a>
@@ -48,7 +48,10 @@
       </ul>
     </li>
     <li>
-      <a routerLink="/composio" routerLinkActive="active">Composio Gmail</a>
+      <a routerLink="/customer" routerLinkActive="active">Customer</a>
+    </li>
+    <li>
+      <a routerLink="/life-cycle" routerLinkActive="active">Life Cycle</a>
     </li>
   </ul>
 </nav>
