Added ngContainer and ngTemplate

--- a/src/app/component/layout/layout.component.html
+++ b/src/app/component/layout/layout.component.html
@@ -64,6 +64,7 @@
     </li>
     <li>
       <a routerLink="/life-cycle" routerLinkActive="active">Life Cycle</a>
+      <a routerLink="/ng-container" routerLinkActive="active">ng-Container</a>
     </li>
   </ul>
 </nav>
