Added Crud Operation

--- a/src/app/component/layout/layout.component.html
+++ b/src/app/component/layout/layout.component.html
@@ -65,6 +65,7 @@
     <li>
       <a routerLink="/life-cycle" routerLinkActive="active">Life Cycle</a>
       <a routerLink="/ng-container" routerLinkActive="active">ng-Container</a>
+      <a routerLink="/crud-operation" routerLinkActive="active">Crud</a>
     </li>
   </ul>
 </nav>
