--- a/src/app/component/layout/layout.component.html
+++ b/src/app/component/layout/layout.component.html
@@ -66,6 +66,7 @@
       <a routerLink="/life-cycle" routerLinkActive="active">Life Cycle</a>
       <a routerLink="/ng-container" routerLinkActive="active">ng-Container</a>
       <a routerLink="/crud-operation" routerLinkActive="active">Crud</a>
+      <a routerLink="/reusable" routerLinkActive="active">Reusable</a>
     </li>
   </ul>
 </nav>
